@@ -8,7 +8,7 @@ TEST = termios
 MANAGERS = io
 
 C_FILES = init.c
-C_O_FILES = $(C_FILES:%.c=${ARCH}/%.o)
+C_O_FILES = $(C_FILES:%.c=${ARCH}/%.$(OBJEXT))
 
 H_FILES =
 noinst_HEADERS = $(H_FILES)
